# Magnet

node/src/: chain_spec.rs
pallets/assets-bridge/src/: abi.rs  lib.rs
pallets/authorities-noting/: Cargo.toml
pallets/consensus/: Cargo.toml
pallets/evm/precompile/transfer-to-magnet/: Cargo.toml
pallets/evm/precompile/transfer-to-magnet/contracts/: FixedEvmContract_ByteCode.txt  StandardERC20_ByteCode.txt  StandardErc20Token.sol  TransferToMagnet.sol
pallets/evm/precompile/transfer-to-magnet/src/: mock.rs  tests.rs
pallets/liquidation/src/: lib.rs  mock.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
